Created android app and make basic design

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@
 /O-starterWebApp/o_starter/db.sqlite3
 /development_diary.md
 /O-starterWebApp/o_starter/startlists/migrations
+
+*.iml
+.gradle
+**/local.properties
+**/.idea/caches
+**/.idea/libraries
+**/.idea/modules.xml
+**/.idea/workspace.xml
+**/.idea/navEditor.xml
+**/.idea/assetWizardSettings.xml
+.DS_Store
+**/build
+**/captures
+.externalNativeBuild
+.cxx
+local.properties
