--- a/android_o-starter/app/build.gradle
+++ b/android_o-starter/app/build.gradle
@@ -39,5 +39,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //material design
     implementation 'com.google.android.material:material:1.3.0'
+
+    //room database
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
