--- a/android_o-starter/app/src/main/AndroidManifest.xml
+++ b/android_o-starter/app/src/main/AndroidManifest.xml
@@ -2,15 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.o_starter">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OStarter">
-        <activity android:name=".SettingsStartlistActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.StartlistViewActivity"></activity>
+        <activity android:name=".activities.NewCompetitionActivity"></activity>
+        <activity android:name=".activities.SettingsStartlistActivity" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
