--- a/android_o-starter/app/src/main/AndroidManifest.xml
+++ b/android_o-starter/app/src/main/AndroidManifest.xml
@@ -3,11 +3,13 @@
     package="com.example.o_starter">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
