update server docs

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /server_o-starter/o_starter/db.sqlite3
 /development_diary.md
 /server_o-starter/o_starter/startlists/migrations
+/server_o-starter/o_starter/docs/_build
 
 /inputs
 
